--- a/Taxa de entrega/index.html
+++ b/Taxa de entrega/index.html
@@ -12,10 +12,10 @@
         <h1>JS Marmita</h1>
         <form>
             <label><b>Pedidos:</b> </label><br><br>
-            <input id="plate01" type="radio" name="food" required>Panqueca 4 queijos |
-            <input id="plate02" type="radio" name="food" required>Virado a paulista |
-            <input id="plate03" type="radio" name="food" required> Feijoada |
-            <input id="plate04" type="radio" name="food" required> bife acebolado |<br><br>
+            <input id="plate01" type="checkbox" name="food" required>Panqueca 4 queijos |
+            <input id="plate02" type="checkbox" name="food" required>Virado a paulista |
+            <input id="plate03" type="checkbox" name="food" required> Feijoada |
+            <input id="plate04" type="checkbox" name="food" required> bife acebolado |<br><br>
             <label><b>Forma de pagamento:</b> </label><br>
             <input id="payMoney" type="radio" name="pay" required>Dinheiro / PIX |
             <input id="payCard" type="radio" name="pay" required>Cartão |<br><br>
@@ -35,6 +35,7 @@
         </form>
     </div>
     <div>
+        <!--Adicionar opção de escrever os pratos e vincular com o JS-->
         <h1>Informações do prato</h1>
         <li>Panqueca 4 queijos => R$15,00</li>
         <li>Virado a paulista => R$13,00</li>
