--- a/Taxa de entrega/index.html
+++ b/Taxa de entrega/index.html
@@ -12,10 +12,10 @@
         <h1>JS Marmita</h1>
         <form>
             <label><b>Pedidos:</b> </label><br><br>
-            <input id="plate01" type="checkbox" name="food" required><span id="outputPlate01"></span> |
-            <input id="plate02" type="checkbox" name="food" required><span id="outputPlate02"></span> |
-            <input id="plate03" type="checkbox" name="food" required> <span id="outputPlate03"></span> |
-            <input id="plate04" type="checkbox" name="food" required> <span id="outputPlate04"></span> |<br><br>
+            <input id="plate01" type="radio" name="food" required><span id="outputPlate01"></span> |
+            <input id="plate02" type="radio" name="food" required><span id="outputPlate02"></span> |
+            <input id="plate03" type="radio" name="food" required> <span id="outputPlate03"></span> |
+            <input id="plate04" type="radio" name="food" required> <span id="outputPlate04"></span> |<br><br>
             <label><b>Forma de pagamento:</b> </label><br>
             <input id="payMoney" type="radio" name="pay" required>Dinheiro / PIX |
             <input id="payCard" type="radio" name="pay" required>Cartão |<br><br>
