--- a/Taxa de entrega/index.html
+++ b/Taxa de entrega/index.html
@@ -17,10 +17,8 @@
             <input id="plate03" type="radio" name="food" required> <span id="outputPlate03"></span> |
             <input id="plate04" type="radio" name="food" required> <span id="outputPlate04"></span> |<br><br>
             <label><b>Forma de pagamento:</b> </label><br>
-            <input id="payMoney" type="radio" name="pay" required>Dinheiro / PIX |
+            <input id="payMoney" type="radio" name="pay" required>PIX |
             <input id="payCard" type="radio" name="pay" required>Cartão |<br><br>
-            <label>Troco (R$):</label><br>
-            <input id="inputChange" type="text" placeholder="Valor do troco..."><br><br>
             <label><b>Local da entrega (Setor):</b></label><br>
             <input id="sectorA" type="radio" name="sector" required>Setor A |
             <input id="sectorB" type="radio" name="sector" required>Setor B |
